clusters/beryjuio-home/dl-stack/sonarr/sonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: dl-stack
spec:
  ingressClassName: istio
  rules:
    - host: sonarr.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sonarr.${CLUSTER_NAME}.k8s.beryju.io
      secretName: beryjuio-dl-stack-sonarr
